correcion de responsive

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <main>
       <section class="seccion-1">
             <div class="titulo-regalos">
-                  <h1 class="Tit-Regalos" >Regalos exclusivos y personalizados</h1>
+                  <h1 class="Tit-Regalos" >Regalos Personalizados</h1>
             </div>
       </section>
       <section class="seccion-2">
