--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
                   <div class="collapse navbar-collapse" id="navbarNavDropdown">
                         <ul class="navbar-nav">
                               <li class="nav-item">
-                                    <a class="nav-link"  href="./pages/quienessomos.html"target="_blank">QUIENES SOMOS</a>
+                                    <a class="nav-link"  href="./pages/quienessomos.html">QUIENES SOMOS</a>
                               </li>
                               <li class="nav-item">
-                                    <a class="nav-link" href="./pages/contacto.html"target="_blank">CONTACTO</a>
+                                    <a class="nav-link" href="./pages/contacto.html">CONTACTO</a>
                               </li>
                               <li class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle" href="./pages/productos.html" role="button" data-bs-toggle="dropdown" aria-expanded="false"> PRODUCTOS </a>
@@ -41,7 +41,7 @@
                                           </ul>
                               </li>
                               <li class="nav-item">
-                                    <a class="nav-link" href="./pages/fechasespeciales.html"target="_blank">FECHAS ESPECIALES</a>
+                                    <a class="nav-link" href="./pages/fechasespeciales.html">FECHAS ESPECIALES</a>
                               </li>
                         </ul>
                   </div>
