--- a/pages/productos.html
+++ b/pages/productos.html
@@ -28,22 +28,22 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link"  href="../index.html"target="_blank">INICIO</a>
+                        <a class="nav-link"  href="../index.html">INICIO</a>
                     <li class="nav-item">
-                        <a class="nav-link"  href="../pages/quienessomos.html"target="_blank">QUIENES SOMOS</a>
+                        <a class="nav-link"  href="../pages/quienessomos.html">QUIENES SOMOS</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../pages/contacto.html"target="_blank">CONTACTO</a>
+                        <a class="nav-link" href="../pages/contacto.html">CONTACTO</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="../pages/productos.html" role="button" data-bs-toggle="dropdown" aria-expanded="false"> PRODUCTOS </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="../pages/productos.html" target="_blank">CATALOGO</a></li>
+                                <li><a class="dropdown-item" href="../pages/productos.html">CATALOGO</a></li>
                                 <li><a class="dropdown-item" href="https://drive.google.com/file/d/1yORXX9-CBqOm2ph_Ape-sovsnKf5Zsgu/view?usp=sharing" target="_blank">LISTA DE PRECIOS</a></li>
                             </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../pages/fechasespeciales.html"target="_blank">FECHAS ESPECIALES</a>
+                        <a class="nav-link" href="../pages/fechasespeciales.html">FECHAS ESPECIALES</a>
                     </li>
                 </ul>
             </div>
