--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                               <li class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle" href="./pages/productos.html" role="button" data-bs-toggle="dropdown" aria-expanded="false"> PRODUCTOS </a>
                                           <ul class="dropdown-menu">
-                                                <li><a class="dropdown-item" href="./pages/productos.html" target="_blank">CATALOGO</a></li>
+                                                <li><a class="dropdown-item" href="./pages/productos.html">CATALOGO</a></li>
                                                 <li><a class="dropdown-item" href="https://drive.google.com/file/d/1yORXX9-CBqOm2ph_Ape-sovsnKf5Zsgu/view?usp=sharing" target="_blank">LISTA DE PRECIOS</a></li>            
                                           </ul>
                               </li>
