--- a/pages/productos.html
+++ b/pages/productos.html
@@ -116,6 +116,26 @@
                             <p>Cuadernos/Agendas</p>
                             <a href="https://photos.app.goo.gl/iqoifHVQ6mYVasEo8" target="_blank" class="btn">Ver más</a>
                         </div>
+                        <div class="card">
+                            <img src="../assets/foto/buzo.jpg" alt="buzos infantiles">
+                            <p>Buzos infantiles</p>
+                            <a href="https://photos.app.goo.gl/RcRSjNwkvMwZJaN16" target="_blank" class="btn">Ver más</a>
+                        </div>
+                        <div class="card">
+                            <img src="../assets/foto/billetera.jpg" alt="Billeteras">
+                            <p>Billeteras</p>
+                            <a href="https://photos.app.goo.gl/uddMJgChLJ7gkQCS9" target="_blank" class="btn">Ver más</a>
+                        </div>
+                        <div class="card">
+                            <img src="../assets/foto/botinero.jpg" alt="Botineros">
+                            <p>Botineros</p>
+                            <a href="https://photos.app.goo.gl/arihDhTPbBfqBWtV9" target="_blank" class="btn">Ver más</a>
+                        </div>
+                        <div class="card">
+                            <img src="../assets/foto/delantal.jpg" alt="Delantales de Cocina">
+                            <p>Delantales de Cocina</p>
+                            <a href="https://photos.app.goo.gl/MzzGMBunhnTShxY3A" target="_blank" class="btn">Ver más</a>
+                        </div>
         </section>    
         <div class="varWatt">
             <a href="https://wa.me/541134098994?text=Mcm%20Sublimaciones!%20Soy%20%20Cecilia,%20dejanos%20tu%20mensaje." target="_blank"> <img class="varWatt" src="../assets/foto/watssap.png" alt="whatssap"></a> 
