--- a/pages/productos.html
+++ b/pages/productos.html
@@ -62,6 +62,11 @@
                                 <a href="https://photos.app.goo.gl/35AZX3RJoUjcarXr9" target="_blank" class="btn">Ver más</a>
                             </div>
                             <div class="card">
+                                <img src="../assets/foto/patas.jpg" alt="taza patitas">
+                                <p>Tazas Patitas</p>
+                                <a href="https://photos.app.goo.gl/yqCDaNu4koYR3Z5R6" target="_blank" class="btn">Ver más</a>
+                            </div>
+                            <div class="card">
                                 <img src="../assets/foto/tazadeplastico.jpg" alt="taza de plastico">
                                 <p>Taza de Plástico</p>
                                 <a href="https://photos.app.goo.gl/VbM3uH4f1hCDtduv6" target="_blank" class="btn">Ver más</a>
@@ -102,6 +107,11 @@
                             <a href="https://photos.app.goo.gl/7prRT3Cn7TakGH9S7" target="_blank" class="btn">Ver más</a>
                         </div>
                         <div class="card">
+                            <img src="../assets/foto/buzo.jpg" alt="buzos infantiles">
+                            <p>Buzos Infantiles</p>
+                            <a href="https://photos.app.goo.gl/RcRSjNwkvMwZJaN16" target="_blank" class="btn">Ver más</a>
+                        </div>
+                        <div class="card">
                             <img src="../assets/foto/body.jpg" alt="body">
                             <p>Body</p>
                             <a href="https://photos.app.goo.gl/PH3nPW64xz3j7yLo9" target="_blank" class="btn">Ver más</a>
@@ -117,11 +127,6 @@
                             <a href="https://photos.app.goo.gl/iqoifHVQ6mYVasEo8" target="_blank" class="btn">Ver más</a>
                         </div>
                         <div class="card">
-                            <img src="../assets/foto/buzo.jpg" alt="buzos infantiles">
-                            <p>Buzos infantiles</p>
-                            <a href="https://photos.app.goo.gl/RcRSjNwkvMwZJaN16" target="_blank" class="btn">Ver más</a>
-                        </div>
-                        <div class="card">
                             <img src="../assets/foto/billetera.jpg" alt="Billeteras">
                             <p>Billeteras</p>
                             <a href="https://photos.app.goo.gl/uddMJgChLJ7gkQCS9" target="_blank" class="btn">Ver más</a>
@@ -135,6 +140,31 @@
                             <img src="../assets/foto/delantal.jpg" alt="Delantales de Cocina">
                             <p>Delantales de Cocina</p>
                             <a href="https://photos.app.goo.gl/MzzGMBunhnTShxY3A" target="_blank" class="btn">Ver más</a>
+                        </div>
+                        <div class="card">
+                            <img src="../assets/foto/portacosmeticos.jpg" alt="Porta Cosmeticos">
+                            <p>Porta Cosmeticos</p>
+                            <a href="https://photos.app.goo.gl/o22MLeH2fd36XkmA6" target="_blank" class="btn">Ver más</a>
+                        </div>
+                        <div class="card">
+                            <img src="../assets/foto/cartuchera.jpg" alt="Cartuchera">
+                            <p>Cartuchera</p>
+                            <a href="https://photos.app.goo.gl/QRbh2MBXZBoxZ1pN7" target="_blank" class="btn">Ver más</a>
+                        </div>
+                        <div class="card">
+                            <img src="../assets/foto/bolsitaauto.jpg" alt="bolsita de auto">
+                            <p>Bolsita de Auto</p>
+                            <a href="https://photos.app.goo.gl/W49RSEFrxduGZw1D6" target="_blank" class="btn">Ver más</a>
+                        </div>
+                        <div class="card">
+                            <img src="../assets/foto/bolsadetela.jpg" alt="bolsa de Tela">
+                            <p>Bolsa de Tela</p>
+                            <a href="https://photos.app.goo.gl/YB6gYfQc5NrzyFVp7" target="_blank" class="btn">Ver más</a>
+                        </div>
+                        <div class="card">
+                            <img src="../assets/foto/setdeasado.jpg" alt="Set de Asador">
+                            <p>Set de Asador</p>
+                            <a href="https://photos.app.goo.gl/RizrreMypE3yFAR89" target="_blank" class="btn">Ver más</a>
                         </div>
         </section>    
         <div class="varWatt">
