--- a/pages/productos.html
+++ b/pages/productos.html
@@ -102,7 +102,7 @@
                             <a href="https://photos.app.goo.gl/yDWXydUbCVEtnsxD6" target="_blank" class="btn">Ver más</a>
                         </div>
                         <div class="card">
-                            <img src="../assets/foto/pijama.jpg" alt="pijama infantil">
+                            <img src="../assets/foto/pijamainvierno.jpg" alt="pijama infantil">
                             <p>Pijama Infantil</p>
                             <a href="https://photos.app.goo.gl/7prRT3Cn7TakGH9S7" target="_blank" class="btn">Ver más</a>
                         </div>
