--- a/index.html
+++ b/index.html
@@ -57,21 +57,19 @@
             <div class="sec2-presentacion">
                   <img class= "foto-inicio"src="./assets/foto/presentacion.png" alt="presentacion">
       </section>
-      <section class="seccion-3">
-            <div>
+      <section>
+            <div class="seccion-3">
                   <h2 class="novedades">Novedades</h2>
-            </div>
-            <div>
                   <div id="carouselExampleRide" class="carousel slide" data-bs-ride="true">
                         <div class="carousel-inner">
                                     <div class="carousel-item active">
-                                          <img src="./assets/foto/taza-inicio.jpg"  alt="taza de ceramica">
+                                          <img src="./assets/foto/buzomerlina.jpg"  alt="buzo infantil merlina">
                                     </div>
                                     <div class="carousel-item">
-                                          <img src="./assets/foto/taza-nom.jpg"  alt="taza de abuelas">
+                                          <img src="./assets/foto/pijamanene.jpg"  alt="pijama infantil increible hulk">
                                     </div>
                                     <div class="carousel-item">
-                                          <img src="./assets/foto/taza-afa.jpg"  alt="taza afa">
+                                          <img src="./assets/foto/remeratini.jpg"  alt="remera infantil tini">
                                     </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleRide" data-bs-slide="prev">
@@ -83,55 +81,7 @@
                               <span class="visually-hidden">Next</span>
                         </button>
                   </div>
-                  <p class="art-inicio">Tazas</p>
-            </div>
-            <div>
-                  <div id="carouselExampleRidee" class="carousel slide" data-bs-ride="true">
-                        <div class="carousel-inner">
-                                    <div class="carousel-item active">
-                                          <img src="./assets/foto/rem.jpg"  alt="remera">
-                                    </div>
-                                    <div class="carousel-item">
-                                          <img src="./assets/foto/rem-2.jpg"  alt="remera">
-                                    </div>
-                                    <div class="carousel-item">
-                                          <img src="./assets/foto/rem-3.jpg"  alt="remera">
-                                    </div>
-                        </div>
-                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleRidee" data-bs-slide="prev">
-                              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                              <span class="visually-hidden">Previous</span>
-                        </button>
-                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleRidee" data-bs-slide="next">
-                              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                              <span class="visually-hidden">Next</span>
-                        </button>
-                  </div>
-                  <p class="art-inicio">Remeras</p>
-            </div>
-            <div>
-                  <div id="carouselExampleRideee" class="carousel slide" data-bs-ride="true">
-                        <div class="carousel-inner">
-                                    <div class="carousel-item active">
-                                          <img src="./assets/foto/alm.jpg"  alt="Almohadones">
-                                    </div>
-                                    <div class="carousel-item">
-                                          <img src="./assets/foto/alm2.jpg"  alt="Almohadones">
-                                    </div>
-                                    <div class="carousel-item">
-                                          <img src="./assets/foto/alm3.jpg"  alt="Almohadones">
-                                    </div>
-                        </div>
-                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleRideee" data-bs-slide="prev">
-                              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                              <span class="visually-hidden">Previous</span>
-                        </button>
-                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleRideee" data-bs-slide="next">
-                              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                              <span class="visually-hidden">Next</span>
-                        </button>
-                  </div>
-                  <p class="art-inicio">Almohadones</p>
+                  <a href="./pages/productos.html" target="_blank" class="btn">Ver más Productos</a>
             </div>
       </section>
       <div class="varWatt">
