--- a/index.html
+++ b/index.html
@@ -63,13 +63,19 @@
                   <div id="carouselExampleRide" class="carousel slide" data-bs-ride="true">
                         <div class="carousel-inner">
                                     <div class="carousel-item active">
-                                          <img src="./assets/foto/buzomerlina.jpg"  alt="buzo infantil merlina">
+                                          <img src="./assets/foto/bodydiadelpadre.jpg"  alt="bodydiadel padre">
                                     </div>
                                     <div class="carousel-item">
-                                          <img src="./assets/foto/pijamanene.jpg"  alt="pijama infantil increible hulk">
+                                          <img src="./assets/foto/riñoneradiadelpadre.jpg"  alt="riñoneradiadelpadre">
                                     </div>
                                     <div class="carousel-item">
-                                          <img src="./assets/foto/remeratini.jpg"  alt="remera infantil tini">
+                                          <img src="./assets/foto/botinerodiadelpadre.jpg"  alt="botinero dia del padre">
+                                    </div>
+                                    <div class="carousel-item">
+                                          <img src="./assets/foto/setdeasadordiadelpadre.jpg"  alt="set de asador dia del padre">
+                                    </div>
+                                    <div class="carousel-item">
+                                          <img src="./assets/foto/delantaldiadelpadre.jpg"  alt="delantal dia del padre">
                                     </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleRide" data-bs-slide="prev">
