--- a/pages/productos.html
+++ b/pages/productos.html
@@ -82,9 +82,9 @@
                             <a href="https://photos.app.goo.gl/jtt8TRxsgBSSuTNP6" target="_blank" class="btn">Ver más</a>
                         </div>
                         <div class="card" >
-                            <img src="../assets/foto/matelisto.jpg" alt="mate lito">
-                            <p>Mate Listo</p>
-                            <a href="https://photos.app.goo.gl/68hTSa1pVx8KtMTcA" target="_blank" class="btn">Ver más</a>
+                            <img src="../assets/foto/RInonera.png" alt="riñonera">
+                            <p>Riñonera</p>
+                            <a href="https://photos.google.com/share/AF1QipMbw9hZ8TDUu2WQLcpYPxmwuT_UbajGg47gjVBchaqjNp_b2CVJql5kPGsrfaj-lw?key=akxadlhzc05DNmR5aDNTcnJKOEx5TkI3OURBcmxB" target="_blank" class="btn">Ver más</a>
                         </div>
                         <div class="card">
                             <img src="../assets/foto/mate.jpg" alt="mate">
