--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
                                     <a class="nav-link dropdown-toggle" href="./pages/productos.html" role="button" data-bs-toggle="dropdown" aria-expanded="false"> PRODUCTOS </a>
                                           <ul class="dropdown-menu">
                                                 <li><a class="dropdown-item" href="./pages/productos.html">CATALOGO</a></li>
-                                                <li><a class="dropdown-item" href="https://drive.google.com/file/d/19AoLARwmPFMSldaPkUEpx1UgmRcjEncT/view" target="_blank">LISTA DE PRECIOS</a></li>            
+                                                <li><a class="dropdown-item" href="
+                                                      " target="_blank">LISTA DE PRECIOS</a></li>            
                                           </ul>
                               </li>
                               <li class="nav-item">
@@ -63,19 +64,13 @@
                   <div id="carouselExampleRide" class="carousel slide" data-bs-ride="true">
                         <div class="carousel-inner">
                                     <div class="carousel-item active">
-                                          <img src="./assets/foto/bodydiadelpadre.jpg"  alt="bodydiadel padre">
+                                          <img src="./assets/foto/jarroboca.png"  alt="jarrotermicoboca">
                                     </div>
                                     <div class="carousel-item">
-                                          <img src="./assets/foto/riñoneradiadelpadre.jpg"  alt="riñoneradiadelpadre">
+                                          <img src="./assets/foto/almoboca.png"  alt="almohadon boca">
                                     </div>
                                     <div class="carousel-item">
-                                          <img src="./assets/foto/botinerodiadelpadre.jpg"  alt="botinero dia del padre">
-                                    </div>
-                                    <div class="carousel-item">
-                                          <img src="./assets/foto/setdeasadordiadelpadre.jpg"  alt="set de asador dia del padre">
-                                    </div>
-                                    <div class="carousel-item">
-                                          <img src="./assets/foto/delantaldiadelpadre.jpg"  alt="delantal dia del padre">
+                                          <img src="./assets/foto/porta.jpg"  alt="portacosmeticos">
                                     </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleRide" data-bs-slide="prev">
