--- a/pages/fechasespeciales.html
+++ b/pages/fechasespeciales.html
@@ -39,7 +39,7 @@
                         <a class="nav-link dropdown-toggle" href="../pages/productos.html" role="button" data-bs-toggle="dropdown" aria-expanded="false"> PRODUCTOS </a>
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="../pages/productos.html">CATALOGO</a></li>
-                                <li><a class="dropdown-item" href="https://drive.google.com/file/d/19AoLARwmPFMSldaPkUEpx1UgmRcjEncT/view" target="_blank">LISTA DE PRECIOS</a></li>            
+                                <li><a class="dropdown-item" href="https://drive.google.com/file/d/1uljOFuWiTdDeeoqqOkPUW5ZrYysDaB_r/view?usp=sharing" target="_blank">LISTA DE PRECIOS</a></li>            
                             </ul>
                     </li>
                     <li class="nav-item">
