--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
                   <div id="carouselExampleRide" class="carousel slide" data-bs-ride="true">
                         <div class="carousel-inner">
                                     <div class="carousel-item active">
-                                          <img src="./assets/foto/jarroboca.png"  alt="jarrotermicoboca">
+                                          <img src="./assets/foto/porta.jpg"  alt="jarrotermicoboca">
                                     </div>
                                     <div class="carousel-item">
                                           <img src="./assets/foto/almoboca.png"  alt="almohadon boca">
                                     </div>
                                     <div class="carousel-item">
-                                          <img src="./assets/foto/porta.jpg"  alt="portacosmeticos">
+                                          <img src="./assets/foto/bodyyy.jpg"  alt="portacosmeticos">
                                     </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleRide" data-bs-slide="prev">
